[project]
name = "midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "arxiv>=2.1.3",
    "cohere>=5.13.12",
    "googlesearch-python>=1.3.0",
    "langchain>=0.3.19",
    "langchain-cohere>=0.4.2",
    "langchain-community>=0.3.18",
    "langchain-google-community>=2.0.4",
    "langchain-openai>=0.3.7",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.74",
    "qdrant-client>=1.12.1",
    "ragas>=0.2.13",
    "unstructured>=0.16.23",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
